@@ -41,23 +41,24 @@ func TestGenerateHints(t *testing.T) {
 			event: bus.Event{
 				"kubernetes": common.MapStr{
 					"container": common.MapStr{
-						"name": "foobar",
-						"id":   "abc",
+						"name":    "foobar",
+						"id":      "abc",
+						"runtime": "rkt",
 					},
 				},
 			},
 			result: bus.Event{
 				"kubernetes": common.MapStr{
 					"container": common.MapStr{
-						"name": "foobar",
-						"id":   "abc",
+						"name":    "foobar",
+						"id":      "abc",
+						"runtime": "rkt",
 					},
 				},
-				"docker": common.MapStr{
-					"container": common.MapStr{
-						"name": "foobar",
-						"id":   "abc",
-					},
+				"container": common.MapStr{
+					"name":    "foobar",
+					"id":      "abc",
+					"runtime": "rkt",
 				},
 			},
 		},
@@ -77,8 +78,9 @@ func TestGenerateHints(t *testing.T) {
 						"not.to.include":                    "true",
 					},
 					"container": common.MapStr{
-						"name": "foobar",
-						"id":   "abc",
+						"name":    "foobar",
+						"id":      "abc",
+						"runtime": "docker",
 					},
 				},
 			},
@@ -92,8 +94,9 @@ func TestGenerateHints(t *testing.T) {
 						"co.elastic.metrics.foobar/period":  "15s",
 					},
 					"container": common.MapStr{
-						"name": "foobar",
-						"id":   "abc",
+						"name":    "foobar",
+						"id":      "abc",
+						"runtime": "docker",
 					},
 				},
 				"hints": common.MapStr{
@@ -107,11 +110,10 @@ func TestGenerateHints(t *testing.T) {
 						"period": "15s",
 					},
 				},
-				"docker": common.MapStr{
-					"container": common.MapStr{
-						"name": "foobar",
-						"id":   "abc",
-					},
+				"container": common.MapStr{
+					"name":    "foobar",
+					"id":      "abc",
+					"runtime": "docker",
 				},
 			},
 		},
